# borsa

./: .bunnycdn-api-key.txt  .dockerignore  .env.example  .env.obfuscated.example  .env.production  .env.production.template  .env.sendgrid.example  .env.vercel  .eslintrc.json  .gitattributes  .gitignore  .lighthouserc.json  .lintstagedrc.json  .prettierignore  .quantum-obfuscation-map.json  .vercel-trigger  .vercelignore  ACE-GOVERNANCE-ROADMAP-2025.md  ACE-INTEGRATION-COMPLETE.md  ADMIN-CREDENTIALS-INFO.md  ADVANCED-STATUS-FEATURES-README.md  AI-MODEL-OBFUSCATION-COMPLETE-GUIDE.md  AI-MODEL-OBFUSCATION-PHASE-1-COMPLETE-2025-10-19.md  AI-MODEL-OBFUSCATION-REPORT-2025-12-20.md  AI-OBFUSCATION-DEPLOYMENT-SUCCESS-2025-10-12.md  AI-OBFUSCATION-QUICK-REFERENCE.md  AI-OPS-CENTER-ACTIVE-SECTIONS-2025-10-17.md  AI-OPS-CENTER-TURKIFICATION-COMPLETE-2025-10-17.md  AILYDIAN-ULTRA-PRO-COMPLETE-ANALYSIS-2025-10-09.md  AILYDIAN-UNIFIED-THEME-REPORT.md  API_KEYS_GUIDE.md  ARAMA-MOTORU-TEST-RAPORU-TR.md  AUTH-SYSTEM-COMPLETE-REPORT.md  AUTH-SYSTEM-PRODUCTION-READY-2025-10-08.md  AUTH_SYSTEM_SUMMARY.md  AUTO-FIX-SEO-REPORT.json  AUTO-SEARCH-CONSOLE-UPDATE-REPORT.json  BACKUP_SYSTEM.md  BEYAZ-SAPKA-GUVENLIK-RAPORU-2025.md  BRIEF_FINAL_INDEX_SYNC.md  (+389 more)
.cleanup-backup-20251004-233430/: chat-demo.js  oauth.js  roles.js  solve.js
.githooks/: install.sh  pre-commit
.github/: CODEOWNERS  DOCUMENTATION_REVIEW_PROCESS.md  SECURITY.md  (+1 more)
public/docs/sdks/python/: README.md  pyproject.toml  setup.py
public/docs/sdks/python/src/lydian/: __init__.py  insan_iq.py  lydian_iq.py  types.py
(+5280 files in other folders)
